language/move-lang/tests/move_check/expansion/public_main.exp
error: 

   ┌── tests/move_check/expansion/public_main.move:1:1 ───
   │
 1 │ public fun main() {
   │ ^^^^^^ Extraneous 'public' modifier. This top-level function is assumed to be public
   │

